# patina

./: .gitignore  Cargo.toml  README.md  build.rs  bundler.toml  design.md
.githooks/: post-commit  post-merge
.github/workflows/: build.yml  cross_compile.yml
docs/: tr909-circuit-reference.md
patches/: acid-bath.patch  acidline.patch  aerial-bass.patch  aerial-pad.patch  arpeggio.patch  arpwash.patch  beacon.patch  bocuma.patch  cassette-choir.patch  cathedral.patch  clavier.patch  commonrail.patch  corona.patch  deepsine.patch  depthcharge.patch  doorchime.patch  dreampad.patch  drone.patch  farvoice.patch  fathom-bass.patch  fathom.patch  feltkeys.patch  floor.patch  germanium-cry.patch  ghostpads.patch  glass-anemone.patch  glassdyad.patch  glasshigh.patch  glasslead.patch  glasswing.patch  glintbell.patch  gritlow.patch  heartbass.patch  heliograph.patch  hollowpad.patch  init.patch  livewire.patch  loopvoice.patch  lowglow.patch  mallet.patch  (+37 more)
scripts/: already_there.py  borrow-voice.sh  bundle-au.sh  chatterbox-say.py  compound-eyes.py  drums_for_laurie.py  drums_for_steve.py  install-plugins.sh  laurie-video.py  nevernot-harmonize.py  nevernot-synccheck.py  nevernot-video.py  nevernotbecoming.py  one_note_at_a_time.py  prodigal-melodize.py  prodigal-video.py  prodigal-voices.py  strobe-video.py  talkbox-duet.py  talkbox-flow.py  talkbox-line.py  talkbox-score.py  the_carrying.py
songs/: acid.song  aerial-playground.song  already-there.song  aphelion.song  bocuma-sketch.song  borrowed-voice.song  chop-hook.song  clear-signal.song  compound-eyes.song  dear-listener.song  drums-for-laurie.song  drums-for-steve.song  dub-generation.song  faster-higher.song  filament.song  first-light.song  four-rooms.song  glasshours.song  grid-runner.song  hexachrome.song  hold-on.song  human-after-all.song  ironwater.song  knotwork.song  kokoro-dream.song  lantern-fish.song  lead-voice.song  machine-heart.song  magnetic-memory.song  milkteeth.song  neural-voice.song  nevernotbecoming.song  nightdrive.song  one-electrical-object.song  one-note-at-a-time.song  package.txt  perihelion.song  pressure-lines.song  prodigal-program.song  pulsar.song  (+18 more)
src/: adaa.rs  aurora_gpu.rs  chorus.rs  drums.rs  editor.rs  envelope.rs  filter.rs  fuzz.rs  host_params.rs  hpf.rs  lfo.rs  lib.rs  main.rs  midi_handler.rs  noise.rs  oscillator.rs  panel.rs  panel_render.rs  patch.rs  plugin.rs  render.rs  reverb.rs  rng.rs  sampler.rs  smoothing.rs  song.rs  spectral.rs  spring.rs  substrate.rs  talker.rs  tape.rs  ui.rs  vocoder.rs  voice.rs  voice_manager.rs  vox.rs
src/au/: cocoa.rs  factory.m  ffi.rs  mod.rs  raster.rs
