[package]
name = "patina"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "patina"
path = "src/main.rs"
required-features = ["app"]

[features]
default = ["app"]
# The standalone desktop app (window, audio device, hardware MIDI in)
app = [
    "dep:cpal",
    "dep:eframe",
    "dep:bytemuck",
    "dep:dasp_sample",
    "dep:midir",
    "dep:midly",
    "dep:crossbeam-channel",
]
# The CLAP/VST3 plugin (host provides audio, MIDI, and parameter UI):
#   cargo xtask bundle patina --release --no-default-features --features plugin
plugin = ["dep:nice-plug"]
# The native AUv2 Audio Unit for Logic Pro / GarageBand (macOS only, no
# extra dependencies — talks straight to the AudioComponent ABI):
#   scripts/bundle-au.sh
au = []

[dependencies]
parking_lot = "0.12.1"
rand = "0.8.5"

cpal = { version = "0.15.2", optional = true }
# wgpu renderer: custom WGSL paint callbacks drive the animated aurora and
# live glass panels
eframe = { version = "0.31", optional = true, features = ["wgpu"] }
bytemuck = { version = "1.16", features = ["derive"], optional = true }
dasp_sample = { version = "0.11", optional = true }
midir = { version = "0.10.1", optional = true }
midly = { version = "0.5.3", optional = true }
crossbeam-channel = { version = "0.5.14", optional = true }

nice-plug = { version = "0.1.10", optional = true }

# The tape engine runs 8x-oversampled hysteresis; keep debug builds realtime
[profile.dev]
opt-level = 2
